--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
   <h1>This is the blog of a geek and zoomer-consoomer</h1>
+  
+  <a href="blog.html">My blogposts</a>
+
   <p>I don't know if the blog will contain anything technical or useful at all, but my stupid thoughts, ideas and self-improvement projects (Remember I am a zoomer-consoomer?)</p>
   <>
   <p>also, I forgot to mention, I REALLY don't care about the look of the website</p>
