--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,6 @@
   <body>
     
     <a href="blogposts/first_post.html">My first blogpost</a>
-
+    <a href="blogposts/sc_quit.html">Starting of my journey without social media</a>
   </body>
 </html>
